- Update Georgian translations (NorwayFun, #22673).
- Don't use invalid iterator in wxString in UTF-8 build (Ian Day, #23305).
- Fix wrong description for some languages (Ulrich Telle, #23419).
- Fix infinite loop in wxFTP::GetFilesList() (#23519).
- Fix memory leak when using wx from non-wx threads (Antti Nietosvaara, #23535).
- Use grep instead of fgrep and egrep in makefiles/scripts (#23537).

All (GUI):

- Fix wxFLEX_GROWMODE_ALL in wxFlexGridSizer with proportions (#23253).
- Fix wxEditorDialogProperty in wxPropertyGrid (#23272).
- Fix entering dates in wxGenericDatePicker in nb_NO and other locales
  using names for the months in short date format (#23310).
- Fix wx-config output when using NanoSVG library (#23373).
- Fix bug modifying shared images in wxImage::Clear() (#23555).
- Add EVT_FULLSCREEN event macro (Christian Beier, #23566).
- Clear old attributes when changing wxGrid table (Brian Nixon, #23607).
- Fix background colour of wxVListBox (Maarten Bent, #23641).
- Fix return value of wxAuiToolBarItem::GetDisabledBitmap() (taler21, #23666).
- Fix buffer overflow in wxHTMLDataObject::GetDataHere() (mcorino, #23660).
- Fix crash when loading some mal-formed GIFs (PB, #23409).
- Relax checks on character entry in numeric validators (#12968, #23561).
- Fix wxRibbonToolBar::GetToolByPos() and DeleteToolByPos() (mcorino, #23457).
- Update wxOwnerDrawnComboBox best size when adding items (Reza Karimi, #23681).
- Keep wxProgressDialog size when updating the message (Oleg Samarin, #23727).
- Fix crash when deleting selected item in wxGenericListCtrl (#23729).

wxGTK:

- Fix key codes with Shift on non-US keyboards (Ivan Sorokin, #17643, #23379).
- Dramatically optimize adding many items to wxChoice (Ian McInerney, #23443).
- Improve and document wxGLCanvas::CreateSurface() (Dan Gudmundsson, #23366).
- Fix loading WebKit2 extension when using wxWebView (Scott Talbert, #23497).
- Fix editing cells without values in wxDataViewCtrl (#23523).